feat: add npm run lint check

--- a/palette/package.json
+++ b/palette/package.json
@@ -4,7 +4,8 @@
   "description": "palette",
   "main": "js/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "./node_modules/.bin/eslint js/index.js"
   },
   "author": "Evgeny Ivanov <ineg22@gmail.com>",
   "license": "MIT",
