--- a/palette/package.json
+++ b/palette/package.json
@@ -4,7 +4,7 @@
   "description": "palette",
   "main": "js/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/jest js/test.js",
     "lint": "./node_modules/.bin/eslint js/index.js"
   },
   "author": "Evgeny Ivanov <ineg22@gmail.com>",
@@ -18,6 +18,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "jest": "^24.9.0",
     "prettier": "^1.18.2"
   }
 }
