fix: add eslint jest rule

--- a/palette/.eslintrc.json
+++ b/palette/.eslintrc.json
@@ -1,7 +1,10 @@
 {
-  "env": { "browser": true },
+  "env": {
+    "browser": true,
+    "jest/globals": true
+  },
   "extends": ["airbnb", "prettier"],
-  "plugins": ["prettier"],
+  "plugins": ["prettier", "jest"],
   "rules": {
     "prettier/prettier": ["error"]
   }
