--- a/palette/package.json
+++ b/palette/package.json
@@ -5,7 +5,7 @@
   "main": "js/index.js",
   "scripts": {
     "test": "./node_modules/.bin/jest js/test.js",
-    "lint": "./node_modules/.bin/eslint js/index.js"
+    "lint": "./node_modules/.bin/eslint js"
   },
   "author": "Evgeny Ivanov <ineg22@gmail.com>",
   "license": "MIT",
@@ -14,6 +14,7 @@
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^23.0.3",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
