--- a/codejam-image-api/.prettierrc
+++ b/codejam-image-api/.prettierrc
@@ -1,7 +1,5 @@
 {
-  "extends": ["airbnb", "prettier"],
-  "plugins": ["prettier"],
-  "rules": {
-    "prettier/prettier": ["error"]
-  }
+    "printWidth": 150,
+    "singleQuote": true,
+    "trailingComma": "es5"
 }
