--- a/codejam-image-api/package.json
+++ b/codejam-image-api/package.json
@@ -4,23 +4,27 @@
   "description": "codejam-image-api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest test/test.js",
+    "lint": "eslint src/js",
     "build": "webpack",
     "start": "webpack --watch"
   },
   "author": "Evgeny Ivanov <ineg22@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^23.0.4",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "jest": "^24.9.0",
     "node-sass": "^4.13.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.0",
