--- a/codejam-image-api/.eslintrc.json
+++ b/codejam-image-api/.eslintrc.json
@@ -6,6 +6,7 @@
   "extends": ["airbnb", "prettier"],
   "plugins": ["prettier", "jest"],
   "rules": {
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "no-alert": "off"
   }
 }
