refactor: mentor tips applied

--- a/palette/.eslintrc.json
+++ b/palette/.eslintrc.json
@@ -3,9 +3,10 @@
     "browser": true,
     "jest/globals": true
   },
-  "extends": ["airbnb", "prettier"],
+  "extends": ["airbnb-base", "prettier"],
   "plugins": ["prettier", "jest"],
   "rules": {
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "import/extensions": ["error", "never", {"js": "always"}]
   }
 }
