--- a/palette/package.json
+++ b/palette/package.json
@@ -4,22 +4,20 @@
   "description": "palette",
   "main": "js/index.js",
   "scripts": {
-    "test": "./node_modules/.bin/jest js/test.js",
-    "lint": "./node_modules/.bin/eslint js"
+    "test": "jest js/test.js",
+    "lint": "eslint js/*.js"
   },
   "author": "Evgeny Ivanov <ineg22@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.7.0",
     "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.5.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^23.0.3",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-jest": "^23.0.4",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^24.9.0",
-    "prettier": "^1.18.2"
+    "prettier": "^1.19.1"
   }
 }
