--- a/codejam-image-api/package.json
+++ b/codejam-image-api/package.json
@@ -2,7 +2,7 @@
   "name": "codejam-image-api",
   "version": "1.0.0",
   "description": "codejam-image-api",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "jest test/test.js",
     "lint": "eslint src/js",
@@ -12,17 +12,15 @@
   "author": "Evgeny Ivanov <ineg22@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.7.0",
     "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
     "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.5.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^23.0.4",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jest": "^24.9.0",
     "node-sass": "^4.13.0",
@@ -31,5 +29,8 @@
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "netlify-auth-providers": "^1.0.0-alpha5"
   }
 }
