--- a/fancy-weather/package.json
+++ b/fancy-weather/package.json
@@ -7,7 +7,7 @@
     "test": "jest src/test/test.js",
     "lint": "eslint src/js",
     "build": "webpack",
-    "start": "webpack --watch"
+    "start": "webpack-dev-server"
   },
   "author": "Evgeny Ivanov <ineg22@gmail.com>",
   "license": "MIT",
@@ -20,6 +20,7 @@
     "eslint-plugin-jest": "^23.1.1",
     "eslint-plugin-prettier": "^3.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "node-sass": "^4.13.0",
@@ -27,6 +28,12 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "weather-icons": "^1.3.2",
+    "ymaps": "^0.2.1"
   }
 }
