--- a/fancy-weather/package.json
+++ b/fancy-weather/package.json
@@ -12,6 +12,7 @@
   "author": "Evgeny Ivanov <ineg22@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.7.5",
     "css-loader": "^3.2.1",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
