--- a/fancy-weather/package.json
+++ b/fancy-weather/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
-    "weather-icons": "^1.3.2",
+    "skycons": "^1.0.0",
     "ymaps": "^0.2.1"
   }
 }
