feat: landing page filling

--- a/simple-piskel-clone/.eslintrc.json
+++ b/simple-piskel-clone/.eslintrc.json
@@ -7,8 +7,6 @@
   "plugins": ["prettier", "jest"],
   "rules": {
     "prettier/prettier": ["error"],
-    "import/extensions": ["error", "always", {
-      "ignorePackages": true
-    }]
+    "import/extensions": true
   }
 }
